<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1AAAAAAA"
    android:fitsSystemWindows="true"
    tools:context=".LoginAdmActivity"
    tools:openDrawer="start">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/screenContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbarContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:animationCache="true"
            android:elevation="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include
                android:id="@+id/toolbarInclude"
                layout="@layout/toolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:fillViewport="true"
            android:fitsSystemWindows="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarContainer"
            app:layout_constraintVertical_bias="0.33">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="64dp"
                    android:layout_marginEnd="64dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutInputPass"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/layoutInputUser"
                        app:passwordToggleEnabled="true">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/inputPass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/pass_hint"
                            android:inputType="numberPassword"
                            android:textSize="16sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/lock_icon"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_marginTop="32dp"
                        android:contentDescription="@string/lock_icon"
                        android:scaleType="fitCenter"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_lock" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutInputUser"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:endIconDrawable="@drawable/ic_account"
                        app:endIconMode="custom"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/lock_icon">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/inputUser"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/usu_rio"
                            android:inputType="textPersonName"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button"
                        style="@style/OutlinedButton"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginBottom="64dp"
                        android:onClick="efetuarLogin"
                        android:text="@string/entrar"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/layoutInputPass"
                        app:layout_constraintStart_toStartOf="@+id/layoutInputPass"
                        app:layout_constraintTop_toBottomOf="@+id/layoutInputPass" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.drawerlayout.widget.DrawerLayout>